pynestml/generated/PyNestMLParser.py
# Generated from PyNestMLParser.g4 by ANTLR 4.7.1
# encoding: utf-8
from __future__ import print_function
from antlr4 import *
from io import StringIO
import sys



class PyNestMLParser ( Parser ):

    grammarFileName = "PyNestMLParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"'\"\"\"'", u"<INVALID>", u"<INVALID>", 
                     u"<INVALID>", u"<INVALID>", u"<INVALID>", u"'end'", 
                     u"'integer'", u"'real'", u"'string'", u"'boolean'", 
                     u"'void'", u"'function'", u"'inline'", u"'return'", 
                     u"'if'", u"'elif'", u"'else'", u"'for'", u"'while'", 
                     u"'in'", u"'step'", u"'inf'", u"'and'", u"'or'", u"'not'", 
                     u"'recordable'", u"'kernel'", u"'neuron'", u"'state'", 
                     u"'parameters'", u"'internals'", u"'update'", u"'equations'", 
                     u"'input'", u"'output'", u"'current'", u"'spike'", 
                     u"'inhibitory'", u"'excitatory'", u"'...'", u"'('", 
                     u"')'", u"'+'", u"'~'", u"'|'", u"'^'", u"'&'", u"'['", 
                     u"'<-'", u"']'", u"'[['", u"']]'", u"'<<'", u"'>>'", 
                     u"'<'", u"'>'", u"'<='", u"'+='", u"'-='", u"'*='", 
                     u"'/='", u"'=='", u"'!='", u"'<>'", u"'>='", u"','", 
                     u"'-'", u"'='", u"'*'", u"'**'", u"'/'", u"'%'", u"'?'", 
                     u"':'", u"';'", u"'''" ]

    symbolicNames = [ u"<INVALID>", u"DOCSTRING_TRIPLEQUOTE", u"WS", u"LINE_ESCAPE", 
                      u"DOCSTRING", u"SL_COMMENT", u"NEWLINE", u"END_KEYWORD", 
                      u"INTEGER_KEYWORD", u"REAL_KEYWORD", u"STRING_KEYWORD", 
                      u"BOOLEAN_KEYWORD", u"VOID_KEYWORD", u"FUNCTION_KEYWORD", 
                      u"INLINE_KEYWORD", u"RETURN_KEYWORD", u"IF_KEYWORD", 
                      u"ELIF_KEYWORD", u"ELSE_KEYWORD", u"FOR_KEYWORD", 
                      u"WHILE_KEYWORD", u"IN_KEYWORD", u"STEP_KEYWORD", 
                      u"INF_KEYWORD", u"AND_KEYWORD", u"OR_KEYWORD", u"NOT_KEYWORD", 
                      u"RECORDABLE_KEYWORD", u"KERNEL_KEYWORD", u"NEURON_KEYWORD", 
                      u"STATE_KEYWORD", u"PARAMETERS_KEYWORD", u"INTERNALS_KEYWORD", 
                      u"UPDATE_KEYWORD", u"EQUATIONS_KEYWORD", u"INPUT_KEYWORD", 
                      u"OUTPUT_KEYWORD", u"CURRENT_KEYWORD", u"SPIKE_KEYWORD", 
                      u"INHIBITORY_KEYWORD", u"EXCITATORY_KEYWORD", u"ELLIPSIS", 
                      u"LEFT_PAREN", u"RIGHT_PAREN", u"PLUS", u"TILDE", 
                      u"PIPE", u"CARET", u"AMPERSAND", u"LEFT_SQUARE_BRACKET", 
                      u"LEFT_ANGLE_MINUS", u"RIGHT_SQUARE_BRACKET", u"LEFT_LEFT_SQUARE", 
                      u"RIGHT_RIGHT_SQUARE", u"LEFT_LEFT_ANGLE", u"RIGHT_RIGHT_ANGLE", 
                      u"LEFT_ANGLE", u"RIGHT_ANGLE", u"LEFT_ANGLE_EQUALS", 
                      u"PLUS_EQUALS", u"MINUS_EQUALS", u"STAR_EQUALS", u"FORWARD_SLASH_EQUALS", 
                      u"EQUALS_EQUALS", u"EXCLAMATION_EQUALS", u"LEFT_ANGLE_RIGHT_ANGLE", 
                      u"RIGHT_ANGLE_EQUALS", u"COMMA", u"MINUS", u"EQUALS", 
                      u"STAR", u"STAR_STAR", u"FORWARD_SLASH", u"PERCENT", 
                      u"QUESTION", u"COLON", u"SEMICOLON", u"DIFFERENTIAL_ORDER", 
                      u"BOOLEAN_LITERAL", u"STRING_LITERAL", u"NAME", u"UNSIGNED_INTEGER", 
                      u"FLOAT" ]

    RULE_dataType = 0
    RULE_unitType = 1
    RULE_unitTypeExponent = 2
    RULE_expression = 3
    RULE_simpleExpression = 4
    RULE_unaryOperator = 5
    RULE_bitOperator = 6
    RULE_comparisonOperator = 7
    RULE_logicalOperator = 8
<<<<<<< HEAD
    RULE_variable = 9
    RULE_functionCall = 10
    RULE_inlineExpression = 11
    RULE_odeEquation = 12
    RULE_kernel = 13
    RULE_block = 14
    RULE_stmt = 15
    RULE_compoundStmt = 16
    RULE_smallStmt = 17
    RULE_assignment = 18
    RULE_declaration = 19
    RULE_returnStmt = 20
    RULE_ifStmt = 21
    RULE_ifClause = 22
    RULE_elifClause = 23
    RULE_elseClause = 24
    RULE_forStmt = 25
    RULE_whileStmt = 26
    RULE_nestMLCompilationUnit = 27
    RULE_neuron = 28
    RULE_body = 29
    RULE_blockWithVariables = 30
    RULE_updateBlock = 31
    RULE_equationsBlock = 32
    RULE_inputBlock = 33
    RULE_indexParameter = 34
=======
    RULE_indexParameter = 9
    RULE_variable = 10
    RULE_functionCall = 11
    RULE_inlineExpression = 12
    RULE_odeEquation = 13
    RULE_kernel = 14
    RULE_block = 15
    RULE_stmt = 16
    RULE_compoundStmt = 17
    RULE_smallStmt = 18
    RULE_assignment = 19
    RULE_declaration = 20
    RULE_returnStmt = 21
    RULE_ifStmt = 22
    RULE_ifClause = 23
    RULE_elifClause = 24
    RULE_elseClause = 25
    RULE_forStmt = 26
    RULE_whileStmt = 27
    RULE_nestMLCompilationUnit = 28
    RULE_neuron = 29
    RULE_body = 30
    RULE_blockWithVariables = 31
    RULE_updateBlock = 32
    RULE_equationsBlock = 33
    RULE_inputBlock = 34
>>>>>>> pnbabu/vectors
    RULE_inputPort = 35
    RULE_inputQualifier = 36
    RULE_outputBlock = 37
    RULE_function = 38
    RULE_parameter = 39

    ruleNames =  [ u"dataType", u"unitType", u"unitTypeExponent", u"expression", 
                   u"simpleExpression", u"unaryOperator", u"bitOperator", 
                   u"comparisonOperator", u"logicalOperator", u"indexParameter", 
                   u"variable", u"functionCall", u"inlineExpression", u"odeEquation", 
                   u"kernel", u"block", u"stmt", u"compoundStmt", u"smallStmt", 
                   u"assignment", u"declaration", u"returnStmt", u"ifStmt", 
                   u"ifClause", u"elifClause", u"elseClause", u"forStmt", 
                   u"whileStmt", u"nestMLCompilationUnit", u"neuron", u"body", 
                   u"blockWithVariables", u"updateBlock", u"equationsBlock", 
                   u"inputBlock", u"indexParameter", u"inputPort", u"inputQualifier", 
                   u"outputBlock", u"function", u"parameter" ]

    EOF = Token.EOF
    DOCSTRING_TRIPLEQUOTE=1
    WS=2
    LINE_ESCAPE=3
    DOCSTRING=4
    SL_COMMENT=5
    NEWLINE=6
    END_KEYWORD=7
    INTEGER_KEYWORD=8
    REAL_KEYWORD=9
    STRING_KEYWORD=10
    BOOLEAN_KEYWORD=11
    VOID_KEYWORD=12
    FUNCTION_KEYWORD=13
    INLINE_KEYWORD=14
    RETURN_KEYWORD=15
    IF_KEYWORD=16
    ELIF_KEYWORD=17
    ELSE_KEYWORD=18
    FOR_KEYWORD=19
    WHILE_KEYWORD=20
    IN_KEYWORD=21
    STEP_KEYWORD=22
    INF_KEYWORD=23
    AND_KEYWORD=24
    OR_KEYWORD=25
    NOT_KEYWORD=26
    RECORDABLE_KEYWORD=27
    KERNEL_KEYWORD=28
    NEURON_KEYWORD=29
    STATE_KEYWORD=30
    PARAMETERS_KEYWORD=31
    INTERNALS_KEYWORD=32
    UPDATE_KEYWORD=33
    EQUATIONS_KEYWORD=34
    INPUT_KEYWORD=35
    OUTPUT_KEYWORD=36
    CURRENT_KEYWORD=37
    SPIKE_KEYWORD=38
    INHIBITORY_KEYWORD=39
    EXCITATORY_KEYWORD=40
    ELLIPSIS=41
    LEFT_PAREN=42
    RIGHT_PAREN=43
    PLUS=44
    TILDE=45
    PIPE=46
    CARET=47
    AMPERSAND=48
    LEFT_SQUARE_BRACKET=49
    LEFT_ANGLE_MINUS=50
    RIGHT_SQUARE_BRACKET=51
    LEFT_LEFT_SQUARE=52
    RIGHT_RIGHT_SQUARE=53
    LEFT_LEFT_ANGLE=54
    RIGHT_RIGHT_ANGLE=55
    LEFT_ANGLE=56
    RIGHT_ANGLE=57
    LEFT_ANGLE_EQUALS=58
    PLUS_EQUALS=59
    MINUS_EQUALS=60
    STAR_EQUALS=61
    FORWARD_SLASH_EQUALS=62
    EQUALS_EQUALS=63
    EXCLAMATION_EQUALS=64
    LEFT_ANGLE_RIGHT_ANGLE=65
    RIGHT_ANGLE_EQUALS=66
    COMMA=67
    MINUS=68
    EQUALS=69
    STAR=70
    STAR_STAR=71
    FORWARD_SLASH=72
    PERCENT=73
    QUESTION=74
    COLON=75
    SEMICOLON=76
    DIFFERENTIAL_ORDER=77
    BOOLEAN_LITERAL=78
    STRING_LITERAL=79
    NAME=80
    UNSIGNED_INTEGER=81
    FLOAT=82

    def __init__(self, input, output=sys.stdout):
        super(PyNestMLParser, self).__init__(input, output=output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class DataTypeContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(PyNestMLParser.DataTypeContext, self).__init__(parent, invokingState)
            self.parser = parser
            self.isInt = None # Token
            self.isReal = None # Token
            self.isString = None # Token
            self.isBool = None # Token
            self.isVoid = None # Token
            self.unit = None # UnitTypeContext

        def INTEGER_KEYWORD(self):
            return self.getToken(PyNestMLParser.INTEGER_KEYWORD, 0)

        def REAL_KEYWORD(self):
            return self.getToken(PyNestMLParser.REAL_KEYWORD, 0)

        def STRING_KEYWORD(self):
            return self.getToken(PyNestMLParser.STRING_KEYWORD, 0)

        def BOOLEAN_KEYWORD(self):
            return self.getToken(PyNestMLParser.BOOLEAN_KEYWORD, 0)

        def VOID_KEYWORD(self):
            return self.getToken(PyNestMLParser.VOID_KEYWORD, 0)

        def unitType(self):
            return self.getTypedRuleContext(PyNestMLParser.UnitTypeContext,0)


        def getRuleIndex(self):
            return PyNestMLParser.RULE_dataType

        def accept(self, visitor):
            if hasattr(visitor, "visitDataType"):
                return visitor.visitDataType(self)
            else:
                return visitor.visitChildren(self)




    def dataType(self):

        localctx = PyNestMLParser.DataTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_dataType)
        try:
            self.state = 86
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PyNestMLParser.INTEGER_KEYWORD]:
                self.enterOuterAlt(localctx, 1)
                self.state = 80
                localctx.isInt = self.match(PyNestMLParser.INTEGER_KEYWORD)
                pass
            elif token in [PyNestMLParser.REAL_KEYWORD]:
                self.enterOuterAlt(localctx, 2)
                self.state = 81
                localctx.isReal = self.match(PyNestMLParser.REAL_KEYWORD)
                pass
            elif token in [PyNestMLParser.STRING_KEYWORD]:
                self.enterOuterAlt(localctx, 3)
                self.state = 82
                localctx.isString = self.match(PyNestMLParser.STRING_KEYWORD)
                pass
            elif token in [PyNestMLParser.BOOLEAN_KEYWORD]:
                self.enterOuterAlt(localctx, 4)
                self.state = 83
                localctx.isBool = self.match(PyNestMLParser.BOOLEAN_KEYWORD)
                pass
            elif token in [PyNestMLParser.VOID_KEYWORD]:
                self.enterOuterAlt(localctx, 5)
                self.state = 84
                localctx.isVoid = self.match(PyNestMLParser.VOID_KEYWORD)
                pass
            elif token in [PyNestMLParser.LEFT_PAREN, PyNestMLParser.NAME, PyNestMLParser.UNSIGNED_INTEGER]:
                self.enterOuterAlt(localctx, 6)
                self.state = 85
                localctx.unit = self.unitType(0)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class UnitTypeContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(PyNestMLParser.UnitTypeContext, self).__init__(parent, invokingState)
            self.parser = parser
            self.base = None # UnitTypeContext
            self.left = None # UnitTypeContext
            self.leftParentheses = None # Token
            self.compoundUnit = None # UnitTypeContext
            self.rightParentheses = None # Token
            self.unitlessLiteral = None # Token
            self.divOp = None # Token
            self.right = None # UnitTypeContext
            self.unit = None # Token
            self.timesOp = None # Token
            self.powOp = None # Token
            self.exponent = None # UnitTypeExponentContext

        def LEFT_PAREN(self):
            return self.getToken(PyNestMLParser.LEFT_PAREN, 0)

        def unitType(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(PyNestMLParser.UnitTypeContext)
            else:
                return self.getTypedRuleContext(PyNestMLParser.UnitTypeContext,i)


        def RIGHT_PAREN(self):
            return self.getToken(PyNestMLParser.RIGHT_PAREN, 0)

        def UNSIGNED_INTEGER(self):
            return self.getToken(PyNestMLParser.UNSIGNED_INTEGER, 0)

        def FORWARD_SLASH(self):
            return self.getToken(PyNestMLParser.FORWARD_SLASH, 0)

        def NAME(self):
            return self.getToken(PyNestMLParser.NAME, 0)

        def STAR(self):
            return self.getToken(PyNestMLParser.STAR, 0)

        def STAR_STAR(self):
            return self.getToken(PyNestMLParser.STAR_STAR, 0)

        def unitTypeExponent(self):
            return self.getTypedRuleContext(PyNestMLParser.UnitTypeExponentContext,0)


        def getRuleIndex(self):
            return PyNestMLParser.RULE_unitType

        def accept(self, visitor):
            if hasattr(visitor, "visitUnitType"):
                return visitor.visitUnitType(self)
            else:
                return visitor.visitChildren(self)



    def unitType(self, _p=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = PyNestMLParser.UnitTypeContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 2
        self.enterRecursionRule(localctx, 2, self.RULE_unitType, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PyNestMLParser.LEFT_PAREN]:
                self.state = 89
                localctx.leftParentheses = self.match(PyNestMLParser.LEFT_PAREN)
                self.state = 90
                localctx.compoundUnit = self.unitType(0)
                self.state = 91
                localctx.rightParentheses = self.match(PyNestMLParser.RIGHT_PAREN)
                pass
            elif token in [PyNestMLParser.UNSIGNED_INTEGER]:
                self.state = 93
                localctx.unitlessLiteral = self.match(PyNestMLParser.UNSIGNED_INTEGER)
                self.state = 94
                localctx.divOp = self.match(PyNestMLParser.FORWARD_SLASH)
                self.state = 95
                localctx.right = self.unitType(2)
                pass
            elif token in [PyNestMLParser.NAME]:
                self.state = 96
                localctx.unit = self.match(PyNestMLParser.NAME)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 110
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 108
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
                    if la_ == 1:
                        localctx = PyNestMLParser.UnitTypeContext(self, _parentctx, _parentState)
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_unitType)
                        self.state = 99
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 102
                        self._errHandler.sync(self)
                        token = self._input.LA(1)
                        if token in [PyNestMLParser.STAR]:
                            self.state = 100
                            localctx.timesOp = self.match(PyNestMLParser.STAR)
                            pass
                        elif token in [PyNestMLParser.FORWARD_SLASH]:
                            self.state = 101
                            localctx.divOp = self.match(PyNestMLParser.FORWARD_SLASH)
                            pass
                        else:
                            raise NoViableAltException(self)

                        self.state = 104
                        localctx.right = self.unitType(4)
                        pass

                    elif la_ == 2:
                        localctx = PyNestMLParser.UnitTypeContext(self, _parentctx, _parentState)
                        localctx.base = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_unitType)
                        self.state = 105
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 106
                        localctx.powOp = self.match(PyNestMLParser.STAR_STAR)
                        self.state = 107
                        localctx.exponent = self.unitTypeExponent()
                        pass

             
                self.state = 112
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class UnitTypeExponentContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(PyNestMLParser.UnitTypeExponentContext, self).__init__(parent, invokingState)
            self.parser = parser

        def UNSIGNED_INTEGER(self):
            return self.getToken(PyNestMLParser.UNSIGNED_INTEGER, 0)

        def PLUS(self):
            return self.getToken(PyNestMLParser.PLUS, 0)

        def MINUS(self):
            return self.getToken(PyNestMLParser.MINUS, 0)

        def getRuleIndex(self):
            return PyNestMLParser.RULE_unitTypeExponent

        def accept(self, visitor):
            if hasattr(visitor, "visitUnitTypeExponent"):
                return visitor.visitUnitTypeExponent(self)
            else:
                return visitor.visitChildren(self)




    def unitTypeExponent(self):

        localctx = PyNestMLParser.UnitTypeExponentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_unitTypeExponent)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==PyNestMLParser.PLUS or _la==PyNestMLParser.MINUS:
                self.state = 113
                _la = self._input.LA(1)
                if not(_la==PyNestMLParser.PLUS or _la==PyNestMLParser.MINUS):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()


            self.state = 116
            self.match(PyNestMLParser.UNSIGNED_INTEGER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExpressionContext(ParserRuleContext):
